--- a/web/public/css/app.css
+++ b/web/public/css/app.css
@@ -326,3 +326,55 @@ p span {
     background: #f0f0f0;
     cursor: pointer;
 }
+.modal-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #00000043;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.modal {
+    padding: 1rem .7rem;
+    border-radius: 9px;
+    background: #fff;
+    width: 300px;
+}
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.products {
+    display: flex;
+    flex-direction: column;
+    gap: .8rem;
+    margin-top: .9rem;
+}
+.product-block {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-radius: 5px;
+    padding: 15px 20px;
+    background: #f0f0f0;
+}
+.product-block-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.platform-title {
+    display: flex;
+    align-items: center;
+    gap: .3rem;
+}
+.platform-title img {
+    width: 20px;
+    height: 20px;
+}
