--- a/web/public/css/app.css
+++ b/web/public/css/app.css
@@ -162,17 +162,24 @@ button {
     position: absolute;
     background: #fff;
     z-index: 999;
-    width: 500px;
+    width: 300px;
     border: 1px solid #F7F7F9;
     box-shadow: 1px 2px #F7F7F9;
     border-radius: 4px;
     padding-top: .4rem;
     padding-bottom: .4rem;
 }
+
 .select_opened li {
+    display: flex;
     padding: .3rem .4rem;
     cursor: pointer;
     transition: .3s;
+    gap: .4rem;
+    align-items: center;
+}
+.select_opened li img {
+    width: 20px;
 }
 .select_opened.hide {
     display: none;
@@ -343,9 +350,10 @@ p span {
     padding: 1rem .7rem;
     border-radius: 9px;
     background: #fff;
-    width: 300px;
+    width: auto ;
 }
 .modal-header {
+    margin-bottom: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -377,4 +385,58 @@ p span {
 .platform-title img {
     width: 20px;
     height: 20px;
+}
+.submain-text {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    font-size: 15px;
+    color: #333;
+    margin-top: .6rem;
+}
+.container-list {
+    display: flex;
+    flex-direction: column;
+    gap: .3rem;
+    margin-top: 1rem;
+}
+.block-list {
+    border-radius: 4px;
+    padding: 1rem;
+    border: 1px solid #F7F7F9;
+    box-shadow: 1px 2px #F7F7F9;
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+.list-left-brand {
+    display: flex;
+    align-items: center;
+    gap: .3rem;
+}
+.list-left-brand img {
+    width: 20px;
+}
+.block-list-right {
+    display: flex;
+    align-items: center;
+    gap: .6rem;
+}
+.info-block img {
+    width: 20px;
+}
+.info-block {
+    background: #f0f0f0;
+    border-radius: 4px;
+    padding: .1rem;
+}
+.block-list-left {
+    display: flex;
+    flex-direction: column;
+    gap: .4rem;
+}
+.main-title-inline {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
