--- a/web/public/css/app.css
+++ b/web/public/css/app.css
@@ -254,7 +254,7 @@ li {
     font-size: 32px;
     color: #000;
     font-weight: 600;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
 }
 .form__footer {
     text-align: center;
@@ -350,7 +350,7 @@ p span {
     cursor: pointer;
 }
 .modal {
-    padding: 1rem .7rem;
+    padding: 1rem 1rem;
     border-radius: 9px;
     background: #fff;
     width: auto ;
@@ -454,6 +454,239 @@ p span {
 }
 .container-auth .form {
     width: 100%;
+    padding: 1rem;
+}
+.message-wrapper {
+    background: #fff;
+    border-radius: 10px;
+    width: 100%;    
+    border: 1px solid #F7F7F9;
+    box-shadow: 1px 2px #F7F7F9;
+    margin-top: 2rem;
+    height: 600px;
+    display: flex;
+}
+.message-chat_list {
+    display: flex;
+    flex-direction: column;
+    border-right: 1px solid #F7F7F9;
+    width: 400px;
+}
+.message-chat_list-header {
+    padding: .8rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #F7F7F9;
+    height: 50px;
+}
+.message-chat_list-chats {
+    display: flex;
+    flex-direction: column;
+}
+.message-chat {
+    display: flex;
+    border-bottom: 1px solid #F7F7F9;
+    padding: .8rem;
+    gap: 1rem;
+    height: 80px;
+}
+.message-chat-login {
+    font-size: 15px;
+    font-weight: bold;
+}
+.message-chat-last_message {
+    font-size: 15px;
+}
+.message-chat-con {
+    display: flex;
+    flex-direction: column;
+    gap: .6rem;
+    width: 100%;
+}
+.message-chat-output {
+    width: 100%;
+}
+.message-chat-avatar img {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+}
+.message-chat-not {
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: .4rem;
+    text-align: center;
+    padding: 2rem;
+    max-width: 400px;
+    margin: 1rem auto;
+    height: 100%;
+}
+.message-chat {
+    cursor: pointer;
+    transition: .3s;
+}
+.message-chat:hover {
+    background: #7ca5f828;
+    transition: .3s;
+}
+.message-chat-output_wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+.message-chat-output_wrapper-header {
+    flex-grow: 0;
+    width: 100%;
+    padding: .8rem;
+    border-bottom: 1px solid #F7F7F9;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+}
+.contact-block {
+    display: flex;
+    gap: .7rem;
+    align-items: center;
+}
+.contact-block p {
+    font-size: 14px;
+}
+.contact-block img {
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+}
+.contact-info p{
+    font-size: 14px;
+    color: #333;
+}
+.message-chat-output_wrapper-footer {
+    flex-grow: 0;
+    padding: .9rem;
+    flex-shrink: 0;
+}
+.message-chat-output_wrapper-body {
+    flex-grow: 3;
+    /* display: flex;
+    flex-direction: column; */
+    padding: 1rem;
+}
+.message-left {
+    width: 100%;
+    display: flex;
+    margin: 1rem 0;
+}
+.message-right {
+    width: 100%;
+    display: flex;
+    justify-content: right;
+    margin: 1rem 0;
+}
+.message-right span{
+    color: #333;
+    font-size: 11px;
+    position: relative;
+    top: 15px;
+    left: 5px;
+}
+.message-left span{
+    color: #333;
+    font-size: 11px;
+    position: relative;
+    top: 15px;
+    left: 5px;
+}
+.message-left-inner {
+    border-radius: 10px;
+    color: #fff;
+    padding: .3rem .6rem;
+    background: #7CA6F8;
+    font-size: 15px;
+    max-width: 300px;
+    float: left;
+}
+.message-right-inner {
+    border-radius: 10px;
+    color: #fff;
+    padding: .3rem .6rem;
+    background: #7ca5f8b0;
+    font-size: 15px;
+    max-width: 300px;
+    float: right;
+    display: flex;
+    justify-content: right;
+}
+
+.user-title {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.user-title img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+.user-title-col {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+.user-login {
+    font-size: 18px;
+    font-weight: 550;
+}
+.user-register {
+    font-size: 14px;
+    color: #333;
+}
+.user-rating {
+    display: flex;
+    gap: .6rem;
+    align-items: center;
+}
+.rating-star {
+    display: flex;
+}
+.rating-star img {
+    height: 20px;
+    width: 20px;
+}
+.rating-text {
+    font-size: 15px;
+    color: #7CA6F8;
+}
+.rating-text span {
+    font-weight: 550;
+}
+.user-wrapper {
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+.user-wrapper_left {
+    display: flex;
+    flex-direction: column;
+}
+.user-wrapper_left-header {
+    display: flex;
+    align-items: center;
+    gap: .6rem;
+}
+.user-wrapper_left-header a {
+    color: #333;
+    padding: 0.7rem 1rem;
+    border-radius: 5px;
+    border: 1px solid #f0f0f0;
+    background: #fff;
+    font-size: 15px;
+}
+.lst {
     padding: 1rem;
 }
 @media (min-width: 480px) {
