--- a/web/public/css/app.css
+++ b/web/public/css/app.css
@@ -15,12 +15,16 @@
     --color-primary-hover: #7ca5f8c5;
 }
 body {
-    font-size: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.4rem;
+    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
     width: 100%;
     height: 100%;
     background: var(--color-bg-main);
     color: var(--color-text-main);
+    line-height: 1.5;
+    -webkit-text-size-adjust: 100%;
+    font-weight: 500;
+    tab-size: 4;
 }
 a, a:hover {
     text-decoration: none;
@@ -31,6 +35,12 @@ a, a:hover {
 }
 .flex {
     display: flex;
+}
+
+.top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .sidebar {
     width: 400px;
@@ -68,7 +78,7 @@ li {
 
 .sidebar_header {
     border-bottom: 1px solid var(--color-border);
-    padding: 1rem 1.3rem;
+    padding: 1.5rem 1rem;
     gap: 1rem;
     align-items: center;
 }
@@ -77,10 +87,13 @@ li {
 }
 .secondary_text {
     color: var(--color-text-secondary);
-    font-size: 1rem;
+    font-size: 1.1rem;
 }
 .secondary_text.danger {
     color: var(--color-red);
+}
+.color_primary {
+    color: var(--color-primary);
 }
 .info {
     flex-direction: column;
@@ -101,10 +114,10 @@ img.avatar {
 }
 
 .sidebar-link {
-    padding: 1rem 1.3rem;
+    padding: 1.5rem 1rem;
     cursor: pointer;
     transition: .3s;
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 500;
     align-items: center;
     gap: 1rem;
@@ -146,6 +159,23 @@ textarea {
     font-size: .9rem;
 }
 
+a.button {
+    outline: none;
+    border-radius: 10px;
+    border: none;
+    padding: .6rem 1rem ;
+    color: var(--color-text-main);
+    background: var(--color-primary);
+    cursor: pointer;
+    width: 100%;
+    font-size: 1.1rem;
+    text-align: center;
+    transition: .3s;
+}
+a.btn-black {
+    background: var(--color-bg-secondary);
+    border: 1px solid var(--color-border);
+}
 button {
     outline: none;
     border-radius: 10px;
@@ -155,7 +185,7 @@ button {
     background: var(--color-primary);
     cursor: pointer;
     width: 100%;
-    font-size: 1rem;
+    font-size: 1.1rem;
     transition: .3s;
 }
 button:hover {
@@ -165,7 +195,6 @@ button:hover {
 .btn-black {
     background: transparent;
     border: 1px soldi var(--color-border);
-
 }
 
 .btn-telegram {
@@ -228,10 +257,9 @@ input:-webkit-autofill {
 .middle {
     font-size: 1.2rem;
     font-weight: 500;
-    letter-spacing: .1rem;
 }
 .small {
-    font-size: .7rem;
+    font-size: .9rem;
 }
 .platforms {
    margin-top: .8rem;
@@ -509,6 +537,12 @@ table tbody tr:nth-child(even){
         display: none;
     }
     .content {
+        padding: 1rem;
+    }
+    .modal {
+        width: 100%;
+    }
+    .modal-wrapper {
         padding: 1rem;
     }
 }
