--- a/web/public/css/app.css
+++ b/web/public/css/app.css
@@ -239,8 +239,15 @@ input:-webkit-autofill {
     justify-content: space-between;
 }
 .select-option {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
     border-bottom: 1px solid var(--color-border);
     padding: 1rem;
+}
+.select-option img {
+    width: 30px;
+    height: 30px;
 }
 .mt-1 {
     margin-top: 1rem;
